--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
-        <div id="logo">
-            Instituto Stefanini
-        </div>
 
-        <nav id="menu">
-            <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#"></a>App</li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
+        <div class="bg-gradient">
+
+            <div id="logo">
+                Instituto Stefanini
+            </div>
+
+            <div id="social">
+
+            </div>
+
+            <nav id="menu">
+                <ul>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">App</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section></section>
@@ -28,4 +38,5 @@
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
